# app/Http/Controllers/UsersController.php
@@ -15,12 +15,16 @@ class UsersController extends AbstractController
     protected $validationRules = [
         'create' => [
             'username' => 'required|unique:users,username|min:2|max:32',
+            'first_name' => 'sometimes|required|string|min:2|max:32',
+            'last_name' => 'sometimes|required|string|min:2|max:32',
             'email' => 'required|unique:users,email|email',
             'password' => 'required',
         ],
         'update' => [
             'username' => 'sometimes|required|unique:users,username|min:2|max:32',
             'email' => 'sometimes|required|unique:users,email|email',
+            'first_name' => 'sometimes|required|string|min:2|max:32',
+            'last_name' => 'sometimes|required|string|min:2|max:32',
             'password' => 'sometimes|required',
         ],
     ];
@@ -44,6 +48,11 @@ class UsersController extends AbstractController
                 return $model->toListArray();
             }
         );
+    }
+
+    public function updateUser()
+    {
+        return $this->update($this->request->user()->getId());
     }
 
     public function getUserInfo()
